完成室内显示

--- a/Indoor.html
+++ b/Indoor.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div id="cd-floor-0" class="cd-product-mockup">
-            <div class="cd-start container"></div>
+            <div class="cd-start"></div>
             <ul class="cd-points-container points-enlarged points-pulsing">
                 <li class="cd-single-point ">
                     <a class="cd-img-replace" href="#">More info</a>
@@ -47,6 +47,7 @@
         <a href="#" class="cd-close-product-tour cd-img-replace">返回</a>
     </section>
     <section id="legend-pannel">
+        <div id="switch_btn">图例板</div>
         <div id="Legend">
             <ul>
                 <li>
