--- a/Indoor.html
+++ b/Indoor.html
@@ -22,7 +22,7 @@
         <div id="cd-floor-0" class="cd-product-mockup">
             <div class="cd-start"></div>
             <ul class="cd-points-container points-enlarged points-pulsing">
-                <li class="cd-single-point ">
+                <!-- <li class="cd-single-point ">
                     <a class="cd-img-replace" href="#">More info</a>
                     <div class="cd-more-info cd-left">
                         <h2>Title</h2>
@@ -39,7 +39,7 @@
                     <div class="cd-more-info cd-right">
                         <h2>Title</h2>
                     </div>
-                </li>
+                </li> -->
             </ul>
             <div class="cd-3d-right-side"></div>
             <div class="cd-3d-bottom-side"></div>
