--- a/Indoor.html
+++ b/Indoor.html
@@ -41,6 +41,7 @@
                     </div>
                 </li> -->
             </ul>
+            <div id='loc-0'></div>
             <div class="cd-3d-right-side"></div>
             <div class="cd-3d-bottom-side"></div>
         </div>
@@ -51,40 +52,64 @@
         <div id="Legend">
             <ul>
                 <li>
-                    <div class="box-legend"></div>
-                    <div class="text-legend"></div>
+                    <div class="box-legend" data-id='1_1'></div>
+                    <div class="text-legend">食堂</div>
                 </li>
                 <li>
-                    <div class="box-legend"></div>
-                    <div class="text-legend"></div>
+                    <div class="box-legend" data-id='1_2'></div>
+                    <div class="text-legend">医院</div>
                 </li>
                 <li>
-                    <div class="box-legend"></div>
-                    <div class="text-legend"></div>
+                    <div class="box-legend" data-id='2_1'></div>
+                    <div class="text-legend">机房</div>
                 </li>
                 <li>
-                    <div class="box-legend"></div>
-                    <div class="text-legend"></div>
+                    <div class="box-legend" data-id='2_2'></div>
+                    <div class="text-legend">宿舍</div>
                 </li>
                 <li>
-                    <div class="box-legend"></div>
-                    <div class="text-legend"></div>
+                    <div class="box-legend" data-id='2_3'></div>
+                    <div class="text-legend">洗衣房</div>
                 </li>
                 <li>
-                    <div class="box-legend"></div>
-                    <div class="text-legend"></div>
+                    <div class="box-legend" data-id='2_4'></div>
+                    <div class="text-legend">教室</div>
                 </li>
                 <li>
-                    <div class="box-legend"></div>
-                    <div class="text-legend"></div>
+                    <div class="box-legend" data-id='2_5'></div>
+                    <div class="text-legend">办公室</div>
                 </li>
                 <li>
-                    <div class="box-legend"></div>
-                    <div class="text-legend"></div>
+                    <div class="box-legend" data-id='2_6'></div>
+                    <div class="text-legend">报告厅</div>
                 </li>
                 <li>
-                    <div class="box-legend"></div>
-                    <div class="text-legend"></div>
+                    <div class="box-legend" data-id='2_7'></div>
+                    <div class="text-legend">会议室</div>
+                </li>
+                <li>
+                    <div class="box-legend" data-id='2_8'></div>
+                    <div class="text-legend">值班室</div>
+                </li>
+                <li>
+                    <div class="box-legend" data-id='2_9'></div>
+                    <div class="text-legend">学习间</div>
+                </li>
+                <li>
+                    <div class="box-legend" data-id='3_3'></div>
+                    <div class="text-legend">厕所</div>
+                </li>
+                <li>
+                    <div class="box-legend" data-id='4_1'></div>
+                    <div class="text-legend">垃圾箱</div>
+                </li>
+                <li>
+                    <div class="box-legend" data-id='4_2'></div>
+                    <div class="text-legend">消防栓</div>
+                </li>
+                <li>
+                    <div class="box-legend" data-id='4_3'></div>
+                    <div class="text-legend">书架</div>
                 </li>
             </ul>
         </div>
