--- a/create.html
+++ b/create.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+    <div class='mask'>
+        <div class="spinner"></div>
+    </div>
     <section class="cd-product">
         <div class="cd-product-intro">
             <h1>这是XX楼</h1>
@@ -65,11 +68,7 @@
             </ul>
         </div>
     </section>
-    <section id="roomInfo-pannel">
-        <h1>这是第X层</h1>
-    </section>
-    <section id="location-pannel">
-    </section>
+
     <!-- 室内地图自动大小功能 -->
     <!--     <div id="autoMap" style="position:absolute;">
         <img src="img/cd-app-image.png">
