--- a/create.html
+++ b/create.html
@@ -31,7 +31,7 @@
             <div class="cd-start"></div>
             <ul class="cd-points-container points-enlarged points-pulsing">
             </ul>
-            <div id='loc-0'></div>
+            <div id='loc-0' class='loc-contain'></div>
             <div class="cd-3d-right-side"></div>
             <div class="cd-3d-bottom-side"></div>
         </div>
