--- a/3d/buildingsdemo.html
+++ b/3d/buildingsdemo.html
@@ -102,24 +102,12 @@
   <li>
     <div id="cover1"><a href="../clustertest.html">报修管理<i class="icon-chevron-down"></i></a></div>
     <div id="icon"><i class="icon-briefcase" ></i></div>
-    <ul class="one" id="menu">
-      <li><a href="../clustertest.html" >查看报修信息</a></li>
-      <li><a href="#">导出报修信息</a></li>
-      <li><a href="#">图表分析</a></li>
-      <li><a href="#">修理工管理</a></li>
-    
-    </ul>
   </li>
   
   <!-- Start Services -->
   <li>
     <div id="cover1"><a href="../TSP.html">路径导航<i class="icon-chevron-down"></i></a></div>
     <div id="icon"><i class="icon-truck" ></i></div>
-   <!--  <ul class="one" id="menu">
-      <li><a href="#" id="addpoint" data-toggle="false" onclick="addtsppoint()">添加点</a></li>
-      <li><a href="#">文字添加</a></li>
-      <li><a href="#"  onclick="shortestpath()">路径规划</a></li>
-    </ul> -->
   </li>
  
   <li>
@@ -150,9 +138,7 @@
         <input name="email" type="text" id="email">
         <p>描述<em>*</em></p>
         <textarea name="comment" cols="" rows="" id="comment"></textarea>
-        <input name="send" type="button" id="send" value="提交">
-        <input name="send" type="button" id="send" value="查看全部">
-        <input name="send" type="button" id="send" value="区域查询">
+        <p>请在地图上添加物品丢失的位置<em>*</em></p>
       </li>
     </ul>
   </li>
@@ -167,7 +153,7 @@
   <div id="map_main"></div>
   <div id="building_buttons">
     日照情况：
-    <input id="inp_hour_of_day" size="3" type="number" value="15" min="1" max="23">
+    <input id="inp_hour_of_day" size="3" type="number" value="7" min="1" max="23">
     <br />
   </div>
 
