--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<!-- <meta charset="gb2312"> -->
 <meta name="viewport" content="width=device-width">
-<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
 <title>PAGE1</title>
-<!-- <link rel='stylesheet prefetch' href='http://libs.useso.com/js/font-awesome/4.2.0/css/font-awesome.min.css'> -->
 <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
 <link rel='stylesheet prefetch' href='css/animate.min.css'>
@@ -26,12 +23,10 @@
 
 <script type="text/javascript" src="js/modernizr.custom.29473.js"></script>
 <script type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
-<!-- <script type="text/javascript" src="js/ol.js"></script> -->
 <script src="http://openlayers.org/en/v3.16.0/build/ol.js"></script>
 
 <script type="text/javascript" src="js/dropdown.js"></script>
 <!-- 以上是页面部分引用的包 -->
-<!-- <script src="assets/ol3/js/ol.js" type="text/javascript"></script> -->
 <link rel="stylesheet" href="assets/ol3/css/ol.css" type="text/css">
 <script src="assets/js/helpers.js"></script>
 
@@ -43,13 +38,6 @@
   <!-- 打印地图 -->
   <script type="text/javascript" src="js/FileSaver.js"></script>
   <script type="text/javascript" src="js/canvas-toBlob.js"></script>
-<!--[if IE 7]>
-	<link rel="stylesheet" href="css/font-awesome-ie7.min.css">
-<![endif]-->
-
-<!--[if lte IE 9]>
-	<link href="css/blue/desktop-ie.css" rel="stylesheet" type="text/css">
-<![endif]-->
 <style>
 .Detail
 {
@@ -127,7 +115,6 @@
      	<li>
         	<h3><i class="icon-user"></i>Welcome</h3>
             <p id="p-first">中国地质大学（武汉）位于武汉东湖国家自主创新示范区腹地。学校拥有国家4A级旅游景区——逸夫博物馆，是全国文明单位、湖北省最佳文明单位。校园环境优美，教育、科研、学术氛围浓厚，拥有现代化的教学楼群、图书馆、学生公寓和近万台随时上网的计算机等相关配套设施，为莘莘学子提供了良好的学习、生活和成长的环境。</p>
-            <!-- <img src="img/didalogo.png"> -->
             <a href="http://www.cug.edu.cn/new/">中国地质大学</a>
         </li>
      </ul>
@@ -135,26 +122,14 @@
   
   <!-- Start Portfolio -->
   <li>
-    <div id="cover1"><a href="#">报修管理<i class="icon-chevron-down"></i></a></div>
+    <div id="cover1"><a href="clustertest.html">报修管理<i class="icon-chevron-down"></i></a></div>
     <div id="icon"><i class="icon-briefcase" ></i></div>
-    <ul class="one" id="menu">
-      <li><a href="clustertest.html">查看报修信息</a></li>
-      <li><a href="#">导出报修信息</a></li>
-      <li><a href="#">图表分析</a></li>
-      <li><a href="#">修理工管理</a></li>
-    
-    </ul>
   </li>
   
   <!-- Start Services -->
   <li>
     <div id="cover1"><a href="TSP.html">路径导航<i class="icon-chevron-down"></i></a></div>
     <div id="icon"><i class="icon-truck" ></i></div>
-   <!--  <ul class="one" id="menu">
-      <li><a href="#" id="addpoint" data-toggle="false" onclick="addtsppoint()">添加点</a></li>
-      <li><a href="#">文字添加</a></li>
-      <li><a href="#"  onclick="shortestpath()">路径规划</a></li>
-    </ul> -->
   </li>
  
   <li>
@@ -185,9 +160,7 @@
         <input name="email" type="text" id="email">
         <p>描述<em>*</em></p>
         <textarea name="comment" cols="" rows="" id="comment"></textarea>
-        <input name="send" type="button" id="send" value="提交">
-        <input name="send" type="button" id="send" value="查看全部">
-        <input name="send" type="button" id="send" value="区域查询">
+        <p>请在地图上添加物品丢失的位置<em>*</em></p>
       </li>
     </ul>
   </li>
@@ -317,8 +290,8 @@ var polygonStyle = new ol.style.Style({
 
      var geoJSON_region = new ol.layer.Vector({
         source: new ol.source.Vector({
-          url: 'data/json/basemap2geojsonutf8.json',
-          // url: 'data/json/basemap_geojson.json',
+          url: 'data/json/basemaplast_json.geojson',
+          // url: 'data/json/basemap2geojsonutf8.json',
           format: new ol.format.GeoJSON()
         }),
         style: polygonStyle
@@ -328,7 +301,6 @@ var polygonStyle = new ol.style.Style({
      console.log(vector_region);
     var mapCenter=ol.proj.fromLonLat([114.3983815703, 30.5256872217]);
     var mapcenter=[114.3983815703, 30.5256872217];
-    // var mapExtent=[114.3883815703, 30.4256872217,114.4083815703, 30.6256872217]; //minx,miny,maxx,maxy
     var projection = ol.proj.get('EPSG:3857');
     var view1 = new ol.View({
         // the view's initial state
@@ -346,40 +318,12 @@ var polygonStyle = new ol.style.Style({
           new ol.control.OverviewMap()
         ]),
      overlays: [overlay],
-      // view: new ol.View({
       //       // 设置地大为地图中心,openlayers需要知道所使用的数据的坐标系（openstreetmap采用栅格瓦片地图采用球面墨卡托投影，所以采用墨卡托坐标设置初始化时的中心点，通过transform方法将容易获取的地理坐标系转换为墨卡托坐标系）
       //       center:ol.proj.transform(mapCenter, 'EPSG:4326', 'EPSG:3857'),
       //       zoom: 15
-      //   })
+ 
       view:view1
     });
-     //选择功能
-     // var select = new ol.interaction.Select();
-     // map.addInteraction(select);
-
-     // var selectedFeatures = select.getFeatures();
-
-    
-     // var displayFeatureInfo = function(pixel) {  //点选
-     // map.forEachFeatureAtPixel(pixel, function(feature) {
-     //      selectedFeatures.push(feature);
-     //    });
-     //  };
-
-     //  map.on('click', function(evt) {
-     //    selectedFeatures.clear();
-     //    displayFeatureInfo(evt.pixel);
-     //    console.log(selectedFeatures.get("FID"));
-
-     //    var coordinate = evt.coordinate;
-     //    var hdms = ol.coordinate.toStringHDMS(ol.proj.transform(
-     //        coordinate, 'EPSG:3857', 'EPSG:4326'));
-
-     //    content.innerHTML = '<p>You clicked here:</p><code>' + hdms +
-     //        '</code>';
-     //    overlay.setPosition(coordinate);
-     //  });
-
 
 function mapclick(evt)
 {
@@ -394,9 +338,7 @@ function mapclick(evt)
       coordinate, 'EPSG:3857', 'EPSG:4326'));
   if(feature!==undefined){
       content.innerHTML = '<p>你点击的坐标是：</p><code>' + hdms + '</code><p>这里属于：'+ feature.get('name') + '</p>'+
-      ' <a id="Detail"  href=localhost:8081/GIS_HPM/?abc='+ feature.get('name') + '>查看详情</a>';
-      // content.innerHTML = '<p>你点击的坐标是：</p><code>' + hdms + '</code><p>这里属于：'+ feature.get('name') + '</p>'+' <button id="Detail"  type="button">查看详情</button>';
-
+      ' <a id="Detail"  href=Indoor.html?abc='+ feature.get('building_i') + '>查看详情</a>'+' <a id="Detail"  href=create.html?abc='+ feature.get('building_i') + '>创建路网数据</a>';
   }
   else{
       content.innerHTML = '<p>你点击的坐标是：</p><code>' + hdms + '</code><p>这里尚未统计在房产系统中！</p>';
@@ -407,29 +349,6 @@ function mapclick(evt)
 
 /** * 鼠标点击的事件 */
 map.on('click', mapclick);
-// map.on('click', function(evt) {
-  // 暂时屏蔽
-  // clearmeasure();
-  // var pixel = map.getEventPixel(evt.originalEvent);
-  // var feature = map.forEachFeatureAtPixel(pixel, function(feature, layer) {
-  //   console.log(feature.getId());
-  //   return feature;
-  // });
-  // var coordinate = evt.coordinate;
-  // var hdms = ol.coordinate.toStringHDMS(ol.proj.transform(
-  //     coordinate, 'EPSG:3857', 'EPSG:4326'));
-  // if(feature!==undefined){
-  //   console.log(feature.get);
-  //     content.innerHTML = '<p>你点击的坐标是：</p><code>' + hdms + '</code><p>这里属于：'+ feature.get('area') + '</p>'+' <button id="Detail"  type="button">查看详情</button>';
-
-  // }
-  // else{
-  //     content.innerHTML = '<p>你点击的坐标是：</p><code>' + hdms + '</code><p>这里是大海！</p>';
-  // }
-  // overlay.setPosition(coordinate);
-  // map.addOverlay(overlay);
-// });
-
   var geojsonObject = {
         "type": "FeatureCollection",
         "features": [{
@@ -546,8 +465,6 @@ function measurelengthfun(e) //测面积
         });
         drawLine.on('drawend',function(e){
       //移除之前的线要素
-      // vectorSourceDrawReg.clear();
-      // vectorSourceDrawLine.clear();
       var formatDrawLine=new ol.format.GeoJSON();
       featureDrawLine = formatDrawLine.writeFeature(e.feature.clone(),{
         dataProjection:'EPSG:4326',
@@ -562,8 +479,6 @@ function measurelengthfun(e) //测面积
       alert("length1   "+length1*1609.344+"米");
       clearmeasure();             //移除绘制线和面的交互事件
       map.on('click',mapclick);//添加原先的鼠标点击事件
-      // vectorSourceDrawLine.clear();
-      // vectorSourceDrawReg.clear();
     });
         //向地图添加交互
         map.addInteraction(drawLine);
