--- a/Indoor.html
+++ b/Indoor.html
@@ -177,7 +177,7 @@ left:0px;
     
     .wm_tb {
         position: relative;
-        left: 80px;
+        /*left: 80px;*/
         top: 30px;
     }
     
