--- a/Indoor.html
+++ b/Indoor.html
@@ -177,7 +177,7 @@ left:0px;
     
     .wm_tb {
         position: relative;
-        /*left: 80px;*/
+        left: 80px;
         top: 30px;
     }
     
@@ -228,7 +228,7 @@ left:0px;
                     </div>
                 </li> -->
             </ul>
-            <div id='loc-0'></div>
+            <div id='loc-0' class="loc-contain"></div>
             <div class="cd-3d-right-side"></div>
             <div class="cd-3d-bottom-side"></div>
         </div>
@@ -332,7 +332,7 @@ left:0px;
                     </td>
                     <td class='td_Oper'>
                         <!--            <a href="#" onclick="add_line();">添加设备</a> -->
-                        <a href="#" onclick="SaveData();">保存</a>
+                        <a href="#" id="save-data" >保存</a>
                     </td>
                 </tr>
             </table>
