--- a/create.html
+++ b/create.html
@@ -67,6 +67,7 @@
                 </li>
             </ul>
         </div>
+        <button id='showLast' style="bottom:0px;position:absolute;">显示上次的数据</button>
     </section>
 
     <!-- 室内地图自动大小功能 -->
